<resources>
    <string name="app_name">Calendar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sun">日</string>
    <string name="mon">月</string>
    <string name="tue">火</string>
    <string name="wed">水</string>
    <string name="thu">木</string>
    <string name="fri">金</string>
    <string name="sat">土</string>
</resources>
